# unist-blackboard-mcp

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: clients.md  unist-official-app-request.md
src/unist_blackboard_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  doctor.py  server.py  setup_wizard.py
tests/: test_courses.py  test_features.py  test_http.py  test_logic.py  test_setup.py
