[project]
name = "unist-blackboard-mcp"
version = "0.2.0"
description = "MCP server for UNIST Blackboard (Learn Ultra) — session-cookie auth, read + guarded write"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Seokjune Park", email = "parkseokjune@gmail.com" }]
keywords = ["mcp", "blackboard", "unist", "lms", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "keyring>=25.0",
    "playwright>=1.44",
    "pypdf>=4.0",
]

[project.urls]
Homepage = "https://github.com/parkseokjune/unist-blackboard-mcp"
Repository = "https://github.com/parkseokjune/unist-blackboard-mcp"
Issues = "https://github.com/parkseokjune/unist-blackboard-mcp/issues"
Changelog = "https://github.com/parkseokjune/unist-blackboard-mcp/blob/main/CHANGELOG.md"

[project.scripts]
unist-blackboard-mcp = "unist_blackboard_mcp.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unist_blackboard_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
